MDEV-36405 Session tracking does not report changes from COM_CHANGE_USER

report all sysvar tracker changes, as for the new login.
also report db and other session state changes.